--- a/Microcontroller_Code/inverter_18V_230V.ioc
+++ b/Microcontroller_Code/inverter_18V_230V.ioc
@@ -6,22 +6,23 @@ Mcu.Family=STM32L4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=TIM2
+Mcu.IP4=TIM3
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB0
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA13 (JTMS-SWDIO)
-Mcu.Pin14=PA14 (JTCK-SWCLK)
-Mcu.Pin15=PB3 (JTDO-TRACESWO)
-Mcu.Pin16=PB4 (NJTRST)
-Mcu.Pin17=PB5
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PA9
+Mcu.Pin11=PA13 (JTMS-SWDIO)
+Mcu.Pin12=PA14 (JTCK-SWCLK)
+Mcu.Pin13=PB3 (JTDO-TRACESWO)
+Mcu.Pin14=PB4 (NJTRST)
+Mcu.Pin15=PB5
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
@@ -46,7 +47,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 PA0.Locked=true
 PA0.Signal=GPIO_Analog
@@ -76,27 +76,20 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA5.GPIO_Label=LD2 [green Led]
-PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PA5.GPIO_PuPd=GPIO_NOPULL
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
-PA5.Signal=GPIO_Output
-PA7.Mode=PWM Generation1 CH1 CH1N
-PA7.Signal=TIM1_CH1N
-PA8.Signal=S_TIM1_CH1
+PA5.Signal=S_TIM2_CH1
+PA7.Locked=true
+PA7.Signal=GPIO_Input
+PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB0.Mode=PWM Generation2 CH2 CH2N
-PB0.Signal=TIM1_CH2N
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PB4\ (NJTRST).Locked=true
-PB4\ (NJTRST).Signal=GPIO_Output
+PB4\ (NJTRST).Signal=S_TIM3_CH1
 PB5.Locked=true
-PB5.Signal=GPIO_Output
+PB5.Signal=S_TIM3_CH2
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -143,7 +136,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -199,18 +192,29 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
-SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
+SH.S_TIM1_CH2.0=TIM1_CH2
 SH.S_TIM1_CH2.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
-TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
-TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,CounterMode
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Output Compare2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,AutoReloadPreload
+TIM2.Period=65535
+TIM3.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-Output Compare2 CH2
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-L476RG
 boardIOC=true
 isbadioc=false
